// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-property-name does error with a mismatched name 1`] = `
[
  {
    "column": 9,
    "endColumn": 47,
    "endLine": 1,
    "line": 1,
    "rule": "terra/custom-property-name",
    "severity": "error",
    "text": "Expected --test-color-primary to be suffixed with -color (terra/custom-property-name)",
  },
]
`;

exports[`custom-property-name does error with a mismatched name with hyphen 1`] = `
[
  {
    "column": 9,
    "endColumn": 49,
    "endLine": 1,
    "line": 1,
    "rule": "terra/custom-property-name",
    "severity": "error",
    "text": "Expected --test-icon to be suffixed with -background-image (terra/custom-property-name)",
  },
]
`;
